--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # Supabase - Server-side (private)
-SUPABASE_URL=your-project-url.supabase.co
+SUPABASE_URL=https://your-project-url.supabase.co
 SUPABASE_KEY=your-service-role-key
 
 # Supabase - Client-side (public)
-PUBLIC_SUPABASE_URL=your-project-url.supabase.co
+PUBLIC_SUPABASE_URL=https://your-project-url.supabase.co
 PUBLIC_SUPABASE_ANON_KEY=your-anon-public-key
 
 # OpenRouter API
 OPENROUTER_API_KEY=your-openrouter-api-key
+
+
 
 
