feat: Dodano MainLayout z nawigacją, zaktualizowano strony do wspólnego layoutu i dodano infrastrukturę testów E2E

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,16 @@ supabase/.temp/
 
 # Template reference (do not commit)
 template-reference/
-tests/
+
+# Test output and artifacts
+playwright-report/
+test-results/
+.playwright/
+coverage/
+*.lcov
+
+# Test environment (contains sensitive data)
+.env.test
 
 # IDE and editor files
 .vscode/
