--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "10xCards",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -28,6 +28,7 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.4.1",
     "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/tailwind": "^6.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
