--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.4.1",
     "@astrojs/sitemap": "^3.5.1",
-    "@astrojs/tailwind": "^6.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.90.1",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.15.3",
@@ -45,7 +45,8 @@
     "react-dom": "^19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.2.5",
     "typescript": "^5.9.3",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
