--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -66,58 +66,58 @@ jobs:
           path: test-results/
           retention-days: 30
 
-  e2e-test:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-    needs: lint
-    environment: integration
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '20'
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
-        
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium
-        
-      - name: Run E2E tests
-        run: npm run test:e2e
-        env:
-          PUBLIC_SUPABASE_URL: ${{ vars.PUBLIC_SUPABASE_URL || secrets.PUBLIC_SUPABASE_URL }}
-          PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          E2E_USERNAME_ID: ${{ vars.E2E_USERNAME_ID || secrets.E2E_USERNAME_ID }}
-          E2E_USERNAME: ${{ vars.E2E_USERNAME || secrets.E2E_USERNAME }}
-          E2E_PASSWORD: ${{ secrets.E2E_PASSWORD }}
-          
-      - name: Upload E2E test results
-        if: always()
-        uses: actions/upload-artifact@v5
-        with:
-          name: e2e-test-results
-          path: test-results/
-          retention-days: 30
-          
-      - name: Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v5
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+  # e2e-test:
+  #   name: E2E Tests
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   environment: integration
+  #   
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
+  #       
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: '20'
+  #         cache: 'npm'
+  #         
+  #     - name: Install dependencies
+  #       run: npm ci --legacy-peer-deps
+  #       
+  #     - name: Install Playwright browsers
+  #       run: npx playwright install --with-deps chromium
+  #       
+  #     - name: Run E2E tests
+  #       run: npm run test:e2e
+  #       env:
+  #         PUBLIC_SUPABASE_URL: ${{ vars.PUBLIC_SUPABASE_URL || secrets.PUBLIC_SUPABASE_URL }}
+  #         PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY }}
+  #         SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+  #         E2E_USERNAME_ID: ${{ vars.E2E_USERNAME_ID || secrets.E2E_USERNAME_ID }}
+  #         E2E_USERNAME: ${{ vars.E2E_USERNAME || secrets.E2E_USERNAME }}
+  #         E2E_PASSWORD: ${{ secrets.E2E_PASSWORD }}
+  #         
+  #     - name: Upload E2E test results
+  #       if: always()
+  #       uses: actions/upload-artifact@v5
+  #       with:
+  #         name: e2e-test-results
+  #         path: test-results/
+  #         retention-days: 30
+  #         
+  #     - name: Upload Playwright report
+  #       if: always()
+  #       uses: actions/upload-artifact@v5
+  #       with:
+  #         name: playwright-report
+  #         path: playwright-report/
+  #         retention-days: 30
 
   status-comment:
     name: Post Status Comment
     runs-on: ubuntu-latest
-    needs: [lint, unit-test, e2e-test]
+    needs: [lint, unit-test] # , e2e-test - commented out
     if: always()
     permissions:
       pull-requests: write
